# LocresExporter

./: .gitignore  README.MD  README.md  main.py  pyproject.toml  setup.py
locresexporter/: __init__.py  exporter.py
standalone/: standalone.bat
