[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LocresExporter"
version = "2.0.5"
authors = [
    { name="Disturbo", email="nottodisturb.disturbo@gmail.com" }
]
description = "Tool to generate JSON files for the localization resources of VALORANT"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "ConfigLoader @ git+https://github.com/NotToDisturb/ConfigLoader.git#egg=ConfigLoader",
    "VersionUtils @ git+https://github.com/NotToDisturb/VersionUtils.git#egg=VersionUtils"
]

[project.urls]
"GitHub" = "https://github.com/NotToDisturb/LocresExporter"

[tool.setuptools]
packages = ["locresexporter"]